added footer with link to source

--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
 
 
   </div>
+  <footer>
+    <a href="https://github.com/lena-chen/SheCodes-Project">Open-source code </a> by alena
+  </footer>
   <script src="script.js"></script>
 </body>
 
