styling added to footer

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
   </div>
   <footer>
-    <a href="https://github.com/lena-chen/SheCodes-Project">Open-source code </a> by alena
+    <a href="https://github.com/lena-chen/SheCodes-Project"><strong>Open-source code</strong>  </a> by alena
   </footer>
   <script src="script.js"></script>
 </body>
