--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Weather App</title>
   <link rel="stylesheet" href="src/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -18,6 +18,7 @@
 
 <body>
   <div class="container">
+    <div class="weather-app">
     <div class="row">
       <div class="col-4">
         <h1 id="city">
@@ -49,13 +50,8 @@
             aria-describedby="button-addon2">
           <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i
               class="fas fa-search"></i></button>
-
-
-        </div>
-      </div>
-      <div class="col-4">
+        </div> 
         <div class="input-group mb-3">
-
           <button type="button" class="btn btn-outline-secondary">Current Location </button>
         </div>
       </div>
@@ -128,10 +124,10 @@
       </div>
     </div>
 
-
+    </div>
   </div>
   <footer>
-    <a href="https://github.com/lena-chen/SheCodes-Project"><strong>Open-source code</strong>  </a> by alena
+    <a href="https://github.com/lena-chen/SheCodes-Project" target="_blank"><strong>Open-source code</strong>  </a> by alena
   </footer>
   <script src="script.js"></script>
 </body>
