Update humidity and wind speed

--- a/index.html
+++ b/index.html
@@ -39,9 +39,17 @@
         <div class="today">
           <div class="temp-today">15°C / °F</div>
           <br>
-          🌬 3 km/h
+          🌬 Wind speed:
+          <span class="wind">
+          3 
+          </span>
+          km/h
           <br>
-          💦 1%
+          💦  Humidity:
+          <span class="humidity">
+          1
+          </span>
+          %
         </div>
       </div>
       <div class="col-4">
