Update weather icon

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         </h1>
         <br />
         <span style="font-size: 6em;">
-          <span style="color: #FDE168;">
-            <i class="far fa-sun"></i>
+         <span style="color: #FDE168;">
+            </span>
+            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" id="icon">
           </span>
         </span>
       </div>
@@ -37,9 +38,9 @@
         </h3>
         <br>
         <div class="today">
-          <div class="temp-today">15°C / °F</div>
+          <div class="temp-today">15°C / <a href="#" style="text-decoration: none; ">°F</a></div>
           <br>
-          🌬 Wind speed:
+          🌬 Wind:
           <span class="wind">
           3 
           </span>
