small changes Temperature

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </h3>
         <br>
         <div class="today">
-          <div class="temp-today">15°C / <a href="#" style="text-decoration: none; ">°F</a></div>
+          <span class="temp-today">15</span>°C / <a href="#" style="text-decoration: none;" id="fahrenheit-link">°F</a>
           <br>
           🌬 Wind:
           <span class="wind">
