Rearranging looks of the app

--- a/index.html
+++ b/index.html
@@ -24,21 +24,23 @@
         <h1 id="city">
           Zurich
         </h1>
+          <h3 class="update">
+            Saturday, 10:29
+          </h3>
         <br />
         <span style="font-size: 6em;">
-         <span style="color: #FDE168;">
-            </span>
+         <span style="color: #FDE168;"></span>
             <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" id="icon">
-          </span>
         </span>
       </div>
       <div class="col-4">
-        <h3>
-          Saturday, 10:29
-        </h3>
-        <br>
         <div class="today">
           <span class="temp-today">15</span>°C / <a href="#" style="text-decoration: none;" id="fahrenheit-link">°F</a>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
           <br>
           🌬 Wind:
           <span class="wind">
@@ -70,58 +72,6 @@
         <div class="tomorrow">
           <h5>
             Tomorrow
-          </h5>
-          <br>
-          <span style="font-size: 3em;">
-            <i class="fas fa-cloud-sun"></i>
-          </span>
-          <br>
-          <strong>14°</strong> 0°
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="second">
-          <h5>
-            Monday
-          </h5>
-          <br>
-          <span style="font-size: 3em;">
-            <i class="fas fa-cloud-sun"></i>
-          </span>
-          <br>
-          <strong>14°</strong> 0°
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="third">
-          <h5>
-            Tuesday
-          </h5>
-          <br>
-          <span style="font-size: 3em;">
-            <i class="fas fa-cloud-sun"></i>
-          </span>
-          <br>
-          <strong>14°</strong> 0°
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="fourth">
-          <h5>
-            Wednesday
-          </h5>
-          <br>
-          <span style="font-size: 3em;">
-            <i class="fas fa-cloud-sun"></i>
-          </span>
-          <br>
-          <strong>14°</strong> 0°
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="fifth">
-          <h5>
-            Thursday
           </h5>
           <br>
           <span style="font-size: 3em;">
