display forecast in js

--- a/index.html
+++ b/index.html
@@ -28,15 +28,11 @@
             Saturday, 10:29
           </h3>
         <br />
-        <span style="font-size: 6em;">
-         <span style="color: #FDE168;"></span>
-            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" id="icon">
-        </span>
+           <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" id="icon">
       </div>
       <div class="col-4">
         <div class="today">
           <span class="temp-today">15</span>°C / <a href="#" style="text-decoration: none;" id="fahrenheit-link">°F</a>
-          <br>
           <br>
           <br>
           <br>
@@ -67,22 +63,20 @@
         </div>
       </div>
     </div>
+  <div id="forecast">
     <div class="row">
-      <div class="col-sm">
-        <div class="tomorrow">
-          <h5>
-            Tomorrow
-          </h5>
+      <div class="col-3">
+        <div class="forecast-day"> Thu
           <br>
-          <span style="font-size: 3em;">
-            <i class="fas fa-cloud-sun"></i>
-          </span>
-          <br>
-          <strong>14°</strong> 0°
+         <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" width="42">
+         <div class="forecast-temp">
+           <span class="forecast-max-temp"><strong>14°</strong></span>
+           <span class="forecast-min-temp">5°</span>
+         </div>
         </div>
       </div>
     </div>
-
+  </div>
     </div>
   </div>
   <footer>
