try to change unit
will work on in later again

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       </div>
       <div class="col-4">
         <div class="today">
-          <span class="temp-today">15</span>°C / <a href="#" style="text-decoration: none;" id="fahrenheit-link">°F</a>
+          <strong id="temperature">15</strong>
+          <a href="#" style="text-decoration: none;" id="celsius-link" class="active">°C</a> / 
+          <a href="#" style="text-decoration: none;" id="fahrenheit-link">°F</a>
           <br>
           <br>
           <br>
@@ -51,7 +53,7 @@
           %
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-4" id="search-form">
         <div class="input-group mb-3">
           <input type="text" class="form-control" placeholder="Enter your city" aria-label="Recipient's username"
             aria-describedby="button-addon2">
