--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
       <div class="col-4">
         <div class="today">
           <strong id="temperature">15</strong>
-          <a href="#" style="text-decoration: none;" id="celsius-link" class="active">°C</a> / 
-          <a href="#" style="text-decoration: none;" id="fahrenheit-link">°F</a>
+          <span>°C</span> 
           <br>
           <br>
           <br>
@@ -55,14 +54,11 @@
       </div>
       <div class="col-4" id="search-form">
         <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Enter your city" aria-label="Recipient's username"
+          <input type="text" class="form-control" placeholder="Type city..." aria-label="Recipient's username"
             aria-describedby="button-addon2">
           <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i
               class="fas fa-search"></i></button>
         </div> 
-        <div class="input-group mb-3">
-          <button type="button" class="btn btn-outline-secondary">Current Location </button>
-        </div>
       </div>
     </div>
   <div id="forecast">
